fix: Fix JSON parse error
Author: Felix Hake

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
                 "com.intellij.kubernetes",
                 "com.github.copilot",
                 "mobi.hsz.idea.gitignore",
-                "fr.socolin.application-insights-debug-log-viewer",
+                "fr.socolin.application-insights-debug-log-viewer"
             ]
         }
     },
