--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,12 @@
 {
     // General
     "name": "Template Backend",
-    "workspaceFolder": "/Workspace",
-
-    // Image/Compose
-    "dockerComposeFile": "docker-compose.yml",
-    "service": "devcontainer",
+    "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
+    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+    "remoteUser": "streamerbotcloud",
 
     // Network settings
-    "forwardPorts": [], // Implement ports to forward
-    "portsAttributes": {}, // Add port attributes to ports defined in #forwardPorts
+    "forwardPorts": [5000, 6000, 6001, 6002, 7000, 7001, 7002],
 
     // Features & Customizations
     "features": {
@@ -17,23 +14,23 @@
         "ghcr.io/devcontainers/features/dotnet:2": {
             "version": "9.0"
         },
-        "ghcr.io/devcontainers/features/git:1": {},
-        "ghcr.io/devcontainers/features/git-lfs:1": {},
-        "ghcr.io/devcontainers/features/github-cli:1": {},
-        "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {}
     },
     "customizations": {
         "jetbrains": {
-            "backend": "Rider"
+            "backend": "Rider",
+            "plugins": [
+                "Docker",
+                "org.jetbrains.plugins.github",
+                "com.jetbrains.codeWithMe",
+                "com.intellij.kubernetes",
+                "com.github.copilot",
+                "mobi.hsz.idea.gitignore",
+                "fr.socolin.application-insights-debug-log-viewer"
+            ]
         }
     },
-
-    // Scripts
-    "onCreateCommand": {
-        "installTemplates": "dotnet new install HotChocolate.Templates"
-    },
-    "postStartCommand": {
-        "updateTemplates": "dotnet new update",
-        "restore": "dotnet restore ."
-    }
+    "runArgs": [
+        "--privileged",
+        "--security-opt=seccomp=unconfined"
+    ]
 }
